# PoolDiver

./: .gitignore  PoolDiver.py  README.md  pyproject.toml  requirements.txt
legacy/: PoolDiver.py
pooldiver/: __init__.py  __main__.py  banner.py  cli.py  config.py  console.py  core.py  credentials.py  discovery.py  logger.py  tester.py
pooldiver/_vendor/: README.md  __init__.py
pooldiver/_vendor/enumerate-iam/: README.md  enumerate-iam.py
pooldiver/_vendor/enumerate-iam/enumerate_iam/: bruteforce_tests.py  main.py
tests/: test_s3_integration.py
