[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pooldiver"
version = "3.1.0"
description = "Extract and test AWS credentials from misconfigured Cognito Identity Pools"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "TheZakMan" }]
keywords = ["aws", "cognito", "security", "pentest", "iam", "credentials"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "boto3>=1.26",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/TheZakMan/PoolDiver"
Repository = "https://github.com/TheZakMan/PoolDiver"

[project.scripts]
pooldiver = "pooldiver.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pooldiver"]
